<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="org.wdd.app.android.interestcollection.ui.welcome.activity.SplashActivity">

    <ImageView
        android:id="@+id/activity_splash_bg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@mipmap/splash"
        android:adjustViewBounds="true"
        android:scaleType="centerCrop"/>

    <FrameLayout
        android:id="@+id/activity_splash_provider"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/splash_text"
            android:textColor="@color/white"
            android:ems="1"
            android:textSize="25sp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="80dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:layout_gravity="bottom|center_horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/splash_logo"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold"
                android:text="@string/app_name"
                android:layout_marginTop="6dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Copyright © 2017 BitCat Studio"
                android:textColor="@color/white"
                android:layout_marginTop="12dp"
                android:textSize="12sp"
                android:layout_marginBottom="20dp"/>

        </LinearLayout>

    </FrameLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:id="@+id/activity_splash_ads_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <TextView
            android:id="@+id/activity_splash_skip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_margin="16dp"
            android:visibility="gone"
            android:background="@drawable/background_circle"
            android:gravity="center"
            android:text="@string/click_to_skip"
            android:textColor="@android:color/white"
            android:textSize="14sp"/>

    </RelativeLayout>

</FrameLayout>
