<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="org.wdd.app.android.interestcollection.ui.settings.activity.SettingsActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/activity_settings_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="@color/colorPrimary">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/settings"
            android:textColor="@color/white"
            android:gravity="center"
            android:textSize="@dimen/textSizeToolbarTitle" />

    </android.support.v7.widget.Toolbar>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/common_list_item_bg"
        android:clickable="true"
        android:onClick="onVersionUpdateClicked"
        android:paddingBottom="12dp"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="12dp">

        <ImageView
            android:id="@+id/layout_main_navigation_header_update_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/ic_update" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:layout_toRightOf="@id/layout_main_navigation_header_update_icon"
            android:text="@string/version_update"
            android:textColor="@color/colorItemTitle"
            android:textSize="@dimen/textSizeItemTitle" />

    </RelativeLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/colorCommonDivider" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/common_list_item_bg"
        android:clickable="true"
        android:onClick="onTrashClicked"
        android:paddingBottom="12dp"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="12dp">

        <ImageView
            android:id="@+id/layout_main_navigation_header_trash_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/ic_cleaner" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:layout_toRightOf="@id/layout_main_navigation_header_trash_icon"
            android:text="@string/cache_clean"
            android:textColor="@color/colorItemTitle"
            android:textSize="@dimen/textSizeItemTitle" />

        <TextView
            android:id="@+id/layout_main_navigation_header_trash_size"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:textColor="@color/colorItemExtra"
            android:textSize="@dimen/textSizeItemContent" />

    </RelativeLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/colorCommonDivider" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/common_list_item_bg"
        android:clickable="true"
        android:onClick="onAboutClicked"
        android:paddingBottom="12dp"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="12dp">

        <ImageView
            android:id="@+id/layout_main_navigation_header_about_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/ic_about" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:layout_toRightOf="@id/layout_main_navigation_header_about_icon"
            android:text="@string/about"
            android:textColor="@color/colorItemTitle"
            android:textSize="@dimen/textSizeItemTitle" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:src="@drawable/ic_chevron_right"/>

    </RelativeLayout>

</LinearLayout>
