<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <View
        android:id="@+id/layout_home_menu_statusbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:visibility="gone"/>

    <LinearLayout
        android:id="@+id/layout_home_menu_profile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/colorPrimary"
        android:paddingTop="30dp"
        android:paddingBottom="30dp"
        android:gravity="center"
        android:clickable="true">

        <ImageView
            android:id="@+id/layout_home_menu_headimg"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/ic_female_header"
            android:padding="1dp"
            android:onClick="onProfileClicked"
            android:background="@drawable/shape_white_circle_bg"/>

        <TextView
            android:id="@+id/layout_home_menu__name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:layout_marginTop="3dp"
            android:text="Noname"
            android:textSize="@dimen/textSizeItemContent"
            android:textStyle="bold"/>

    </LinearLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="12dp"
                android:paddingBottom="12dp"
                android:onClick="onFavoritesClicked"
                android:background="@drawable/common_list_item_bg">

                <ImageView
                    android:id="@+id/layout_home_menu_favorites_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/ic_favorites"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorItemTitle"
                    android:textSize="@dimen/textSizeItemContent"
                    android:text="@string/favorites"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="6dp"
                    android:layout_toRightOf="@id/layout_home_menu_favorites_icon"/>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_chevron_right"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"/>
            </RelativeLayout>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:background="@color/colorCommonDivider"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="12dp"
                android:paddingBottom="12dp"
                android:onClick="onVersionCheckClicked"
                android:background="@drawable/common_list_item_bg">

                <ImageView
                    android:id="@+id/layout_home_menu_version_check_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/ic_update"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorItemTitle"
                    android:textSize="@dimen/textSizeItemContent"
                    android:text="@string/version_update"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="6dp"
                    android:layout_toRightOf="@id/layout_home_menu_version_check_icon"/>

            </RelativeLayout>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:background="@color/colorCommonDivider"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="12dp"
                android:paddingBottom="12dp"
                android:onClick="onClearCacheClicked"
                android:background="@drawable/common_list_item_bg">

                <ImageView
                    android:id="@+id/layout_home_menu_clear_cache_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/ic_cleaner"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorItemTitle"
                    android:textSize="@dimen/textSizeItemContent"
                    android:text="@string/cache_clean"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="6dp"
                    android:layout_toRightOf="@id/layout_home_menu_clear_cache_icon"/>

            </RelativeLayout>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:background="@color/colorCommonDivider"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/common_list_item_bg"
                android:clickable="true"
                android:onClick="onAppRecommendationClicked"
                android:paddingBottom="12dp"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="12dp">

                <ImageView
                    android:id="@+id/layout_home_menu_app_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/ic_app_rec" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="10dp"
                    android:layout_toRightOf="@id/layout_home_menu_app_icon"
                    android:text="@string/app_recommendation"
                    android:textColor="@color/colorItemTitle"
                    android:textSize="@dimen/textSizeItemTitle" />

            </RelativeLayout>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:background="@color/colorCommonDivider"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="12dp"
                android:paddingBottom="12dp"
                android:onClick="onAboutClicked"
                android:background="@drawable/common_list_item_bg">

                <ImageView
                    android:id="@+id/layout_home_menu_about_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/ic_about"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorItemTitle"
                    android:textSize="@dimen/textSizeItemContent"
                    android:text="@string/about"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="6dp"
                    android:layout_toRightOf="@id/layout_home_menu_about_icon"/>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_chevron_right"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"/>
            </RelativeLayout>

        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>

</LinearLayout>